# ie_bike_model

ie_bike_model/: README.md  pyproject.toml
ie_bike_model/src/ie_bike_model/: __init__.py  ai.py  data.py  persistence.py
ie_bike_model/tests/: test.py
reference/: Simple-Bike-Sharing-Analysis.ipynb
