[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ie_bike_model"
authors = [{name = "Xinyue Li", email = "xinyueli5518@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires = [
    "pandas",
    "numpy",
    "scikit-learn",
    "os"
]

[tool.flit.metadata.requires-extra]
dev = [
    "black",
    "pytest",
]